# flopsmeter

./: LICENSE  README.md  pyproject.toml
flopsmeter/: flopsmeter.py
sample/: sample.py
