[build-system]
requires = ["setuptools>=59.8.0"]
build-backend = "setuptools.build_meta"

[project]   
name = "flopsmeter"
version = "0.1.0"
description = "FLOPs Calculator for PyTorch Deep Learning Model"
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}

authors = [
    {name = "Fan Chu Hsu", email = "0526phoenix@gmail.com"},
]

dependencies = [
    "torch>=2.2.1,<3.0.0",
]

keywords = [
    "pytorch", "cnn", "flops"
]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10"
]

[project.urls]
Homepage = "https://github.com/0526PHOENIX/flopsmeter"
Documentation = "https://github.com/0526PHOENIX/flopsmeter/blob/master/README.md"
Repository = "https://github.com/0526PHOENIX/flopsmeter.git"

[tool.setuptools.packages.find]
where = ["flopsmeter"]